<resources>

    <string name="app_name">My Application</string>

    <!-- MainActivity -->
    <string name="strtitulo">Primer aplicacion movil</string>
    <string name="strtunombre">Cual es tu nombre?</string>
    <string name="strpulsar">Dar click</string>
    <string name="strlimpiar">Limpiar</string>
    <string name="strcerrar">Cerrar</string>

    <!-- App Menu -->
    <string name="nombreEmpresa">UPSIN</string>
    <string name="alumno">Maria Estefanía Huerta</string>
    <string name="matricula">2023030545</string>
    <string name="materia">Programacion movil</string>

    <!-- Cards -->
    <string name="strHola">Hola</string>
    <string name="strImc">IMC</string>
    <string name="strConGrados">Grados</string>
    <string name="strConMonedas">Monedas</string>
    <string name="strCotizacion">Cotizacion</string>
    <string name="strSpinner">Spinner</string>
    <string name="strconMonedas">Monedas</string>
    <string name="strpre1">PreExamen1</string>
    <string name="strpre2">PreExamen2</string>
    <string name="strCalcular">Calcular</string>

    <string name="strAltura">Altura Ej. 1.80</string>
    <string name="strPeso">Peso Ej. 90.5kg</string>
    <string name="strResultado">Su resultado aqui</string>
    <string name="strCel">Celicius a Fahrenheit</string>
    <string name="strFah">Fahrenheit a Celcius</string>
    <string name="strGrados">Grados</string>
    <string name="strCantidad">Cantidad</string>
    <string name="strMensaje">Falto capturar Cantidad</string>
    <string-array name="monedas">
        <item>Dolar Americano</item>
        <item>Dolar Canadiense</item>
        <item>Euro</item>
        <item>Libras Esterlinas</item>
    </string-array>
    <string name="strMenSalir">¿Deseas cerrar el convertidor de monedas?</string>
    <string name="dolarA">17.40</string>
    <string name="dolarC">18.50</string>
    <string name="euro">21.45</string>
    <string name="libra">22.18</string>
    <string name="strTituloMon">Converidor de Monedas</string>
    <string name="strCantidadP">Cantidad de Pesos</string>
    <string name="strBtnConvertir">Convertir</string>

    <string name="strOpBasicas">Operaciones Básicas</string>
    <string name="strNum1">Ingrese número 1</string>
    <string name="strNum2">Ingrese número 2</string>
    <string-array name="operaciones">
        <item>Suma</item>
        <item>Resta</item>
        <item>Multiplicación</item>
        <item>División</item>
    </string-array>
    <string name="strErrorVacio">Faltan números por capturar</string>
    <string name="strErrorCero">El número no puede ser cero</string>
    <string name="strMenOperaciones">¿Deseas cerrar la aplicación de operaciones?</string>

    <!--    app_Cotizacion-->
    <string name="domicilio">Av. del Mar 1200</string>
    <string name="ciudad">Mazatlan Sinaloa</string>
    <string name="marca">Toyota</string>
    <string name="cliente">Nombre del Cliente</string>
    <string name="folio">Num. Folio</string>
    <string name="des">Descripcion del Automovil</string>
    <string name="precio">Valor del Automovil</string>
    <string name="po">Porcentaje de pago Inicial</string>
    <string name="plazos">Plazos</string>
    <string name="pmensual">Pago Mensual</string>
    <string name="pinicial">Pago Inicial</string>
    <string name="tfin">Total a Financiar</string>
    <string name="desImaCot">Logo Toyota</string>

    <!-- app_calculoNomina -->

    <string name="titulo_nomina">Cálculo de pago de nomina</string>
    <string name="nombre_trabajador_nom">Nombre del Trabajador</string>
    <string name="hint_evaristo">Ej. Evaristo Toscano</string>
    <string name="num_recibo">Número de recibo</string>
    <string name="nombre_empleado_nom">Nombre</string>
    <string name="horas_normales">Horas trabajadas</string>
    <string name="horas_extras">Horas Extras</string>
    <string name="puesto_label">Puesto</string>
    <string name="puesto_auxiliar">Auxiliar</string>
    <string name="puesto_albanil">Albañil</string>
    <string name="puesto_ing">Ing. Obra</string>
    <string name="label_subtotal">Subtotal: </string>
    <string name="label_impuesto">Impuesto: </string>
    <string name="label_total">Total a pagar: </string>
    <string name="btn_entrar_nom">Entrar</string>
    <string name="btn_salir_nom">Salir</string>
    <string name="btn_regresar_nom">Regresar</string>

    <!-- appBanco-->
    <string name="name_app">Examen</string>
    <string name="user_banco">admin</string>
    <string name="pass_banco">1234</string>
    <string name="nombre_banco">Banorte</string>
    <string name="domicilio_banco">av del sol 34</string>

    <string-array name="movimientos_banco">
        <item>Consultar</item>
        <item>Retirar</item>
        <item>Depositar</item>
    </string-array>

</resources>



