<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/fondo_layout"
        android:padding="16dp">

        <TextView
            android:id="@+id/txtTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/fondo_titulo"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/strtitulo"
            android:textColor="@color/red"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/strtunombre"
            android:inputType="textPersonName" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btnPulsar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/strpulsar" />

        <Button
            android:id="@+id/btnLimpiar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/strlimpiar" />

        <Button
            android:id="@+id/btnCerrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/strcerrar" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>