<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".appGrados">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10sp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/strCel"
            android:textSize="20sp"
            android:textAlignment="center"
            android:background="@color/titulo"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:paddingTop="20sp"
            android:paddingBottom="20sp"></TextView>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/strCantidad"
            android:paddingBottom="10sp"
            android:paddingTop="10sp"
            android:inputType="numberDecimal"
            android:textSize="20sp"
            android:id="@+id/txtCantidad">

        </EditText>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="15sp">
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10sp"
                android:id="@+id/rdbGrupo">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/strCel"
                    android:checked="true"
                    android:id="@+id/rdbCel">
                </RadioButton>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/strFah"
                    android:id="@+id/rdbFah">
                </RadioButton>

            </RadioGroup>


        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/strResultado"
            android:textSize="20sp"
            android:gravity="center"
            android:textColor="@color/acentuar"
            android:layout_marginBottom="10sp"
            android:id="@+id/txtResultado">

        </TextView>
        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

        </Space>


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/strCalcular"
            android:id="@+id/btnCalcular">

        </Button>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/strlimpiar"
            android:id="@+id/btnLimpiar">

        </Button>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/strcerrar"
            android:id="@+id/btnCerrar">

        </Button>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>