<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".appOperaciones">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/titulo"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/strOpBasicas"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imgOperacion"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:src="@mipmap/operaciones" />

        <EditText
            android:id="@+id/txtNum1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/strNum1"
            android:textSize="20sp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_marginBottom="10dp"
            android:inputType="numberDecimal|numberSigned" />

        <EditText
            android:id="@+id/txtNum2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/strNum2"
            android:textSize="20sp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_marginBottom="10dp"
            android:inputType="numberDecimal|numberSigned" />

        <Spinner
            android:id="@+id/spnOperaciones"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_marginBottom="10dp" />

        <TextView
            android:id="@+id/txtResultado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/strResultado"
            android:textSize="30sp"
            android:textAlignment="center"
            android:textColor="@color/acentuar" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="2dp">

            <Button
                android:id="@+id/btnCalcular"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.2"
                android:layout_margin="2dp"
                android:text="@string/strCalcular"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btnLimpiar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:text="@string/strlimpiar"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btnCerrar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:text="@string/strcerrar"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>